# rust-by-example

./: README.md
Error-handling/: overview
Error-handling/abort-and-unwind/: Cargo.toml
Error-handling/iterating-over-results/: Cargo.toml  readme
Error-handling/multiple-error-types/: Cargo.toml  appendix
Error-handling/option-and-unwrap/: Cargo.toml
Scoping-rules/: overview
Scoping-rules/RAII/: raii  raii.rs  valgrind
Scoping-rules/lifetimes/: code  code.rs  overview
Scoping-rules/ownership-and-moves/: Cargo.toml
additorial/: Cargo.toml
additorial/src/: main.rs
attributes/: overview
attributes/crates/: lib.rs  library.rlib
attributes/dead-code/: Cargo.toml
cargo/: Build-Scripts  README  Testing  conventions  creating-a-new-rust-project
cargo/dependencies/: Cargo.toml
compatibility/: README.md
compatibility/raw-identifiers/: Cargo.toml
conversion/TryFrom_and_TryInto/: Cargo.toml
crates/: crates.rdme
crates/creating-a-library/: Cargo.toml
enums/C-like/: Cargo.toml
enums/src/: main.rs
enums/use_/: Cargo.toml
expressions/src/: main.rs
flow_of_control/destructure_enums/: Cargo.toml
flow_of_control/match-examples/: Cargo.toml
flow_of_control/src/: main.rs
flow_of_control/while-examples/: Cargo.toml
functions/src/: main.rs
generics/: .readme.swp  overview
generics/associated-items/: overview
generics/multiple-bounds/: Cargo.toml
macro_rules/: testDRY  testDRY.rs
meta/: README.md
std-library-types/: Cargo.toml  README.md
std-misc/: README.md
testing/: README.md
unsafe-operations/: README.md
(+281 files in other folders)
