[package]
name = "dependencies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.19" # from crates.io
rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
# bar = { path = "../bar" } # from a path in the local filesystem

cargo is more than a dependency manager. All of the available configuration
options are listed in the format specification of Cargo.toml.

To build our project we can execute cargo build anywhere in the project
directory (including subdirectories!). We can also do cargo run to build and
run. Notice that these commands will resolve all dependencies, download crates
if needed, and build everything, including your crate. (Note that it only
rebuilds what it has not already built, similar to make).

Voila! That's all there is to it!


